Code/app/K8s Deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mid-station-app-ingress
spec:
  rules:
  - host: mid-station.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 80
      - path: /live
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 1935
